[package]
name = "home"
version = "0.1.0"
authors = ["Ming Yang <my18345@alumni.bristol.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
askama = "0.9"
serde = "1.0.114"

[build-dependencies]
askama = "0.9"